--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
+    color:white;
     background-color: rgb(255, 255, 255);
     font-size:20px;
     font-family: 'Dosis', sans-serif;
@@ -18,8 +19,17 @@ nav{
     border-radius:7px;
     margin-top:50px;
 }
-nav ul{
-
+.logo img{
+    position: absolute;
+    margin-top:10px;
+    border-radius:4px;
+    margin-left:-1400px;
+    height: 70px;
+    width:100px;
+}
+.logo p{
+    position: absolute;
+    margin-left: -1280px;
 }
 nav ul li{
     padding-top:10px;
@@ -145,3 +155,124 @@ nav ul li a {
     width: 100%;
     padding: 20px;
 }
+.container-1 h1{
+    position:absolute;
+    margin-top:400px;
+    margin-left:100px;
+    font-size:50px;
+    font-weight: 500;
+}
+.container-1 p{
+    position: absolute;
+    margin-top:500px;
+    margin-left:100px;
+    font-size:50px;
+    font-weight: 800;
+}
+.container-1 h3{
+    position: absolute;
+    margin-top:600px;
+    margin-left:100px;
+}
+/* .container-1 button{
+    color:white;
+    cursor: pointer;
+    margin-top:670px;
+    position:absolute;
+    margin-left:120px;
+    border-radius: 5px;
+    border:none;
+    height: 50px;
+    width:150px;
+    font-size:26px;
+    font-weight: 800;
+    background-color: rgb(23, 120, 168);
+}
+.container-1 button:hover{
+    border-style: outset;
+    border-width: 1px;
+    border-color:white;
+    background-color: transparent;
+} */
+
+.btn1 {
+    margin-top:700px;
+    margin-left:150px;
+    position: absolute;
+    border: solid 1px rgba(0, 214, 252, 0.3);
+    background: none;
+    color: rgba(0, 214, 252, 0.5);
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    font-weight: normal;
+    letter-spacing: 1.8px;
+    width: 200px;
+    height: 70px;
+    padding: 0;
+    transition: all 0.25s ease;
+    outline: none;
+  }
+  .btn1:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 10%;
+    width: 60px;
+    height: 1px;
+    transform: translateY(-1px);
+    background: #00d6fc;
+    transition: all 0.25s ease;
+  }
+  .btn1:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 10%;
+    width: 60px;
+    height: 1px;
+    transform: translateY(1px);
+    background: #00d6fc;
+    transition: all 0.25s ease;
+  }
+  .btn1:hover {
+    box-shadow: 1px 1px 8px rgba(0, 214, 252, 0.3);
+    color: #00d6fc;
+    text-shadow: 0 0 8px rgba(0, 214, 252, 0.4);
+  }
+  .btn1:hover.btn1:before {
+    left: 0;
+    width: 20px;
+  }
+  .btn1:hover.btn1:after {
+    right: 0;
+    width: 20px;
+  }
+  .btn1:hover .span-1:before {
+    bottom: 0;
+  }
+  .btn1:hover .span-1:after {
+    top: 0;
+  }
+  .span-1:before {
+    content: "";
+    position: absolute;
+    bottom: 30%;
+    right: 0;
+    width: 1px;
+    height: 20px;
+    transform: translateX(1px);
+    background: #00d6fc;
+    transition: all 0.25s ease;
+  }
+  .span-1:after {
+    content: "";
+    position: absolute;
+    top: 30%;
+    left: 0;
+    width: 1px;
+    height: 20px;
+    transform: translateX(-1px);
+    background: #00d6fc;
+    transition: all 0.25s ease;
+  }
+  
