--- a/css/styles.css
+++ b/css/styles.css
@@ -275,4 +275,105 @@ nav ul li a {
     background: #00d6fc;
     transition: all 0.25s ease;
   }
-  
+.log i{
+    position:absolute;
+    margin-top:830px;
+    margin-left:150px;
+    border-right-style: outset;
+    border-width:1px;
+    padding-top:25px;
+    padding-bottom:25px;
+    width:50px;
+    border-color:white;
+}
+.log p{
+    position: absolute;
+    margin-top: 820px;
+    margin-left:215px;
+}
+.log-2 i{
+    position:absolute;
+    margin-top:800px;
+    margin-left:780px;
+    border-right-style: outset;
+    border-width:1px;
+    padding-top:60px;
+    padding-bottom:60px;
+    width:50px;
+    border-color:white;
+}
+.log-2 p{
+    position: absolute;
+    margin-top: 800px;
+    margin-left:855px;
+}
+.log-3 i{
+    position:absolute;
+    margin-top:800px;
+    margin-left:1350px;
+    border-right-style: outset;
+    border-width:1px;
+    padding-top:60px;
+    padding-bottom:60px;
+    width:60px;
+    border-color:white;
+}
+.log-3 p{
+    position: absolute;
+    margin-top: 800px;
+    margin-left:1435px;
+}
+.container-2{
+    position: relative;
+    background-color: #4ab1b1;
+    padding: 20px 840px 600px 50px; 
+    position: absolute;
+    margin-top:1000px;
+    margin-left:-10px;
+    height: 200px;;
+    width:1020px;
+}
+.container-2 .box h2{
+    width:200px;
+    position: absolute;
+    margin-left:-10px;
+    padding: 20px 160px 600px 50px; 
+    
+}
+.container-2 .box-1{
+    position:absolute;
+    box-shadow: rgba(41, 139, 161, 0.56) 0px 22px 70px 4px;
+    border-color:rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
+    margin-left:100px;
+    margin-top:150px;
+    padding:50px 100px 50px 100px; 
+    color:black;
+}
+.container-2 .box-1 img{
+    margin-top:30px;
+    position: relative;
+    height: 200px;
+    width:200px;
+}
+.container-2 .box-1 h1{
+    font-size:30px;
+    text-align: center;
+}
+.container-2 .box-1 p{
+    font-size:22px;
+}
+.container-2 .box-1 button{
+    border:none;
+    font-size:22px;
+    margin-left:20px;
+    background: transparent;
+    text-align: center;
+    height: 50px;
+    width:150px;
+}
+.container-2 .box-1 button a.xeon{
+    color:black;
+    text-decoration: none;
+    border: none;
+}
