--- a/css/styles.css
+++ b/css/styles.css
@@ -459,6 +459,7 @@ nav ul li a {
     height: 200px;;
     width:1020px;
 }
+
 .container-3 button{
     height: 50px;
     width:100px;
@@ -477,7 +478,14 @@ nav ul li a {
     padding:60px 80px 200px 120px ;
     background-color: white;;
 }
-.container-3 .sell-1 img{
+.container-3 .sell-2{
+    position: absolute;
+    margin-top:-120px;
+    margin-left:800px;
+    padding:60px 80px 226Npx 120px ;
+    background-color: white;
+}
+.container-3 .sell-1 img,.container-3 .sell-2 img{
     margin-left:30px;
     height: 150px;
     width:150px
@@ -486,13 +494,18 @@ nav ul li a {
    margin-left:30px;
     color:black;
 }
-.container-3 .sell-1 p{
+.container-3 .sell-2 h1{
+    font-size:30px;
+    margin-left:30px;
+    color:black;
+}
+.container-3 .sell-1 p,.container-3 .sell-2 p{
     margin-top:20px;
     margin-left:-15px;
     color:black;
     font-size: 26px;
 }
-.container-2 .box-1 img,.container-2 .box-2 img,.container-2 .box-3 img,.container-3 .sell-1 img {
+.container-2 .box-1 img,.container-2 .box-2 img,.container-2 .box-3 img,.container-3 .sell-1 img ,.container-3 .sell-2 img{
     --_g: 10% /45% 45% no-repeat linear-gradient(#000 0 0);
     --m:
       left   var(--_i,0%) top    var(--_g),
@@ -505,7 +518,7 @@ nav ul li a {
     transition: .3s linear;
     cursor: pointer;
   }
-  .container-2 .box-1 img:hover,.container-2 .box-2 img:hover,.container-2 .box-3 img:hover,.container-3 .sell-1 img:hover {
+  .container-2 .box-1 img:hover,.container-2 .box-2 img:hover,.container-2 .box-3 img:hover,.container-3 .sell-1 img:hover ,.container-3 .sell-2 img:hover{
     --_i: 10%;
     filter: grayscale(0);
   }
@@ -624,19 +637,244 @@ figure.fig-1 {
     opacity: 0.9;
   }
 
+.boxbtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+  .box4 {
+    background-color: rgb(224, 224, 224);
+}
+.button2 {
+    width: 20vw;
+    aspect-ratio: 10/2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    cursor: pointer;
+    margin-top:-350px;
+    margin-left:-500px;
+    color:white;
+}
+.btn5 {
+    background: rgb(0, 10, 116);
+    transition: .5s ease;
+}
+.btn5:hover {
+    background: none;
+    border: 2px solid rgb(56, 59, 255);
+    transform: translateY(-10%);
+    box-shadow: 0px 0px 20px rgb(0, 21, 255),
+                inset 0px 0px 20px rgb(0, 51, 255);
+    color: rgb(2, 8, 173);
+    text-shadow: 0px 0px 5px rgb(0, 4, 255);
+}
+.btn5::before {
+    content: '';
+    height: 20px;
+    width: 100%;
+    position: absolute;
+    background-color: rgb(0, 8, 255);
+    bottom: -50px;
+    transform: perspective(5rem) rotateX(50deg);
+    filter: blur(20px);
+    display: none;
+    transition: .5s ease;
+}
+.btn5 a{
+    text-decoration: none;
+    position: absolute;
+    color:white;
+}
+.btn5:hover:before {
+    display: block;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Image Slider - container->3 */
   
+.product {
+    position: relative;
+    overflow: hidden;
+    padding: 20px;
+    margin-left:-50px;
+   margin-top:-100px;
+   width:1800px;
+  }
   
+  .product-category {
+    padding: 0 10vw;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 40px;
+    text-transform: capitalize;
+  }
+  
+  .product-container {
+    padding: 0 10vw;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    width:1700px;
+  }
+  
+  .product-container::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .product-card {
+    position: relative;
+    flex: 0 0 auto;
+    width: 250px;
+    height: 450px;
+    margin-right: 40px;
+  }
+  
+  .product-image {
+    position: relative;
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+  }
+  
+  .product-thumb {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .discount-tag {
+    position: absolute;
+    background: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    color: #ff7d7d;
+    right: 10px;
+    top: 10px;
+    text-transform: capitalize;
+  }
+  
+  .card-btn {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    width: 90%;
+    text-transform: capitalize;
+    border: none;
+    outline: none;
+    background: #fff;
+    border-radius: 5px;
+    transition: 0.5s;
+    cursor: pointer;
+    opacity: 0;
+  }
+  
+  .product-card:hover .card-btn {
+    opacity: 1;
+  }
+  
+  .card-btn:hover {
+    background: rgb(0, 25, 248);
+    color: #fff;
+  }
+  
+  .product-info {
+    width: 100%;
+    height: 100px;
+    padding-top: 10px;
+  }
+  
+  .product-brand {
+    text-transform: uppercase;
+  }
+  
+  .product-short-description {
+    width: 100%;
+    height: 20px;
+    line-height: 20px;
+    overflow: hidden;
+    opacity: 0.5;
+    text-transform: capitalize;
+    margin: 5px 0;
+  }
+  
+  .price {
+    font-weight: 900;
+    font-size: 20px;
+  }
+  
+  .actual-price {
+    margin-left: 20px;
+    opacity: 0.5;
+    text-decoration: line-through;
+  }
+  
+.pre-btn,
+.nxt-btn {
+  border: none;
+  width: 10vw;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #fff 100%);
+  cursor: pointer;
+  z-index: 8;
+}
+
+.pre-btn {
+  left: 0;
+  transform: rotate(360deg);
+}
+
+.nxt-btn {
+  right: 0;
+  transform: rotate(180deg);
+}
+
+.pre-btn img,
+.nxt-btn img {
+  opacity: 0.2;
+}
+
+.pre-btn:hover img,
+.nxt-btn:hover img {
+  opacity: 1;
+}
+
+.collection-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
+}
+
+.collection {
+  position: relative;
+}
+
+.collection img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.collection p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  font-size: 50px;
+  text-transform: capitalize;
+}
+
+.collection:nth-child(3) {
+  grid-column: span 2;
+  margin-bottom: 10px;
+}
