--- a/css/styles.css
+++ b/css/styles.css
@@ -1936,10 +1936,29 @@ section.sections-1 .section-container-1 h1,section.sections-1 .section-container
 
 .support-us{
   position:absolute;
-  margin-top:1500px;
+  margin-top:950px;
   margin-left:800px;
+  /* margin-bottom:1000px; */
 }
-.supp
+.support-us h1{
+  margin-top:-20px;
+  position: relative;
+}
+.support-us .vignette-4{
+  position:absolute;
+  height:1200px;
+  width:1900px;
+  margin-top:-1205px;
+  margin-left:-900px;
+  background: radial-gradient(circle, rgba(0,0,0,0.1825105042016807) 0%, rgba(0,0,0,0.6895133053221288) 0%, rgba(0,0,0,1) 61%, rgba(0,0,0,1) 100%);
+}
+.support-us img{
+  position:relative;
+  margin-top:-25px;  
+  margin-left:-800px;
+  height:1200px;
+  width:1900px;
+}
 
 
 
@@ -1953,7 +1972,7 @@ section.sections-1 .section-container-1 h1,section.sections-1 .section-container
 }
 .footer-4{
   position:absolute;
-  margin-top:1000px;
+  margin-top:2000px;
   margin-left:50px;
 }
 .footer-4 img{
